--- a/layout_main/css/default.css
+++ b/layout_main/css/default.css
@@ -261,19 +261,39 @@ ul.style3 li {
 
 /** MENU */
 
+.midnav{ position:relative;width:1000px;margin:0 auto;height:54px; }
+.midnav .prev{
+    float:right;width:30px;height:48px;background:url(../images/bg3_left.jpg) center center;cursor:pointer;margin-top:6px;
+}
+.midnav .next{
+    float:right;width:30px;height:48px;background:url(../images/bg3_right.jpg) center center;cursor:pointer;margin-top:6px;
+}
+
+.scroll-bar-wrap{
+    float:right;
+    width:220px;
+}
+
 #menu-container {
-	width: 920px;
-	margin: 0px auto;
+    float:left;
+	width:700px;
+	height:54px;
 }
 
 #menu {
+    overflow:hidden;
+    position:relative;
+    width: 680px;
 	height: 40px;
 	padding-top: 14px;
 	_padding-top: 0px;
 	_margin-top: 14px;
+	margin-left:10px;
 }
 
 #menu ul {
+    position:absolute;
+    width:6430px;
 	margin: 0px;
 	padding: 0px;
 	list-style: none;
@@ -282,7 +302,9 @@ ul.style3 li {
 
 #menu li {
 	float: left;
-	margin-right: 15px;
+	margin-right: 7px;
+	margin-left: 7px;
+	line-height:21px;
 	text-align: center;
 }
 
@@ -301,19 +323,28 @@ ul.style3 li {
 	letter-spacing: -1px;
 	text-decoration: none;
 	/*text-shadow: #00568D -1px 2px 3px;*/
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-family: Georgia, "Times New Roman", "蘋果儷黑 Pro", "新細明體", "Trebuchet MS", Tahoma, Verdana, Arial, Helvetica, Times, serif;
-	font-size: 18px;
+	font-size: 15px;
 	color: #FFFFFF;
 }
-#menu a span.digit{
-    font-size:12px/9;
-}
-
 #menu a:hover {
 	text-decoration: none;
 	background: url(../images/pointer.png) no-repeat bottom center;
 }
+
+#menu em{
+    display:inline-block;
+    font-style:normal;
+    font-weight:bold;
+    border-bottom:2px solid white;
+	font-family: Georgia, "Times New Roman", "微軟正黑體", "蘋果儷黑 Pro", "新細明體", "Trebuchet MS", Tahoma, Verdana, Arial, Helvetica, Times, serif;
+}
+#menu span.digit{
+	font-family: Georgia, "Times New Roman", Times, serif;
+    font-size:12px;
+    font-weight:bold;
+    color:#eee;
+}
+
 /*
 #menu li.active a {
 	background: url(../images/pointer.png) no-repeat bottom center;
