--- a/layout_main/css/default.css
+++ b/layout_main/css/default.css
@@ -261,6 +261,8 @@ ul.style3 li {
 
 /** MENU */
 
+.logo{ text-indent:-3000px;height:100%;width:200px;display:block;float:left; }
+
 .midnav{ position:relative;width:1000px;margin:0 auto;height:54px; }
 .midnav .prev{
     float:right;width:30px;height:48px;background:url(../images/bg3_left.jpg) center center;cursor:pointer;margin-top:6px;
@@ -270,31 +272,45 @@ ul.style3 li {
 }
 
 .scroll-bar-wrap{
-    float:right;
-    width:290px;
+    position:absolute;
+    right:20px;
+    top:60px;
+    width:240px;
+    height:30px;
 }
+.scroll-bar{
+    clear: both;
+    height:100%;
+    background:red;
+}
+.scroll-bar .ui-handle-helper-parent { position: relative; background:blue; width: 100%; height: 30px; margin: 0 auto; }
+.scroll-bar .ui-slider-handle { display:block; position:absolute; background:green; top:3px; height: 24px; }
+.scroll-bar .ui-slider-handle .ui-icon { margin: -8px auto 0; position: relative; top: 50%; }
+
+/* Corner radius */
+.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 4px/*{cornerRadius}*/; -webkit-border-top-left-radius: 4px/*{cornerRadius}*/; -khtml-border-top-left-radius: 4px/*{cornerRadius}*/; border-top-left-radius: 4px/*{cornerRadius}*/; }
+.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 4px/*{cornerRadius}*/; -webkit-border-top-right-radius: 4px/*{cornerRadius}*/; -khtml-border-top-right-radius: 4px/*{cornerRadius}*/; border-top-right-radius: 4px/*{cornerRadius}*/; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 4px/*{cornerRadius}*/; -webkit-border-bottom-left-radius: 4px/*{cornerRadius}*/; -khtml-border-bottom-left-radius: 4px/*{cornerRadius}*/; border-bottom-left-radius: 4px/*{cornerRadius}*/; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 4px/*{cornerRadius}*/; -webkit-border-bottom-right-radius: 4px/*{cornerRadius}*/; -khtml-border-bottom-right-radius: 4px/*{cornerRadius}*/; border-bottom-right-radius: 4px/*{cornerRadius}*/; }
 
 #menu-container {
-    float:left;
-	width:700px;
+    float:right;
+	width:780px;
 	height:54px;
 }
 
 #menu {
     overflow:hidden;
     position:relative;
-    width: 680px;
+    width: 6000px;
 	height: 40px;
 	padding-top: 14px;
 	_padding-top: 0px;
 	_margin-top: 14px;
-	margin-left:10px;
+	margin-left:0px;
 }
 
 #menu ul {
-    position:absolute;
-    width:6430px;
-	margin: 0px;
 	padding: 0px;
 	list-style: none;
 	line-height: normal;
