--- a/layout_main/css/default.css
+++ b/layout_main/css/default.css
@@ -276,15 +276,16 @@ ul.style3 li {
     right:20px;
     top:60px;
     width:240px;
-    height:30px;
+    height:32px;
+    border:1px solid #ccc;
 }
 .scroll-bar{
     clear: both;
     height:100%;
-    background:red;
+    margin:0 auto;
 }
-.scroll-bar .ui-handle-helper-parent { position: relative; background:blue; width: 100%; height: 30px; margin: 0 auto; }
-.scroll-bar .ui-slider-handle { display:block; position:absolute; background:green; top:3px; height: 24px; }
+.scroll-bar .ui-handle-helper-parent { position: relative; width: 100%; height: 30px; margin: 0 auto; }
+.scroll-bar .ui-slider-handle { display:block; position:absolute; top:3px; height: 25px;background:#ccc; }
 .scroll-bar .ui-slider-handle .ui-icon { margin: -8px auto 0; position: relative; top: 50%; }
 
 /* Corner radius */
@@ -295,19 +296,18 @@ ul.style3 li {
 
 #menu-container {
     float:right;
-	width:780px;
+	width:760px;
 	height:54px;
 }
 
 #menu {
     overflow:hidden;
     position:relative;
-    width: 6000px;
+    width: 6050px;
 	height: 40px;
 	padding-top: 14px;
 	_padding-top: 0px;
 	_margin-top: 14px;
-	margin-left:0px;
 }
 
 #menu ul {
