書卷卷軸加入動畫效果 其他細部修正

--- a/layout_main/css/default.css
+++ b/layout_main/css/default.css
@@ -296,12 +296,12 @@ ul.style3 li {
 
 #menu-container {
     float:right;
-	width:760px;
+	width:740px;
 	height:54px;
+	margin-right:20px;
 }
 
 #menu {
-    overflow:hidden;
     position:relative;
     width: 6050px;
 	height: 40px;
