--- a/layout_main/css/default.css
+++ b/layout_main/css/default.css
@@ -273,11 +273,11 @@ ul.style3 li {
 
 .scroll-bar-wrap{
     position:absolute;
-    right:20px;
-    top:60px;
-    width:240px;
+    right:44px;
+    top:40px;
+    width:457px;
     height:32px;
-    border:1px solid #ccc;
+    border-bottom:1px solid #ccc;
 }
 .scroll-bar{
     clear: both;
@@ -285,7 +285,7 @@ ul.style3 li {
     margin:0 auto;
 }
 .scroll-bar .ui-handle-helper-parent { position: relative; width: 100%; height: 30px; margin: 0 auto; }
-.scroll-bar .ui-slider-handle { display:block; position:absolute; top:3px; height: 25px;background:#ccc; }
+.scroll-bar .ui-slider-handle { display:block; position:absolute; top:1px; height: 30px; background:url(../images/scrollbar-handler.png) no-repeat 0 12px; }
 .scroll-bar .ui-slider-handle .ui-icon { margin: -8px auto 0; position: relative; top: 50%; }
 
 /* Corner radius */
