--- a/layout_main/css/layout.css
+++ b/layout_main/css/layout.css
@@ -74,8 +74,21 @@ a.rss{
 }
 #bible-container ul li{
     float:left;
-    width:180px;
+    position:relative;
+    width:900px;
     height:100%;
+}
+#bible-container .book-info{
+    
+}
+#bible-container .book-info a{
+    font-size:16px;
+}
+#bible-container .book-info .chapter_digit{
+    color:#000;font-size:13px;font-weight:bold;font-family:Arial;
+}
+#bible-container .book-info .book-link{
+    font-size:12px;color:#999;
 }
 .bible-button{
     height:40px;
@@ -84,6 +97,7 @@ a.rss{
     text-align:center;
     cursor:pointer;
     border:1px solid #ccc;
+    margin-bottom:20px;
 }
 #bible-old{ float:left; }
 #bible-new{ float:right; }
