--- a/layout_main/css/default.css
+++ b/layout_main/css/default.css
@@ -216,6 +216,7 @@ ul.style3 li {
 /** SPLASH PAGE */
 
 #splash {
+    position:relative;
 	height: 180px;
 	padding: 15px 0px 0px 0px;
 	font-family: Georgia, "Times New Roman", Times, serif;
@@ -263,6 +264,23 @@ ul.style3 li {
 /** MENU */
 
 .logo{ text-indent:-3000px;height:73px;width:225px;display:block;float:left;margin-top:-20px; }
+.tooltip-button, .tooltip-button-active {
+	position: absolute;
+	/*background:transparent url(<?php echo layout_url('main', '/images/tooltip/white_arrow_wide.png'); ?>);*/
+	height:30px;
+	width:40px;
+    right: -45px;
+    top: 160px;
+    background: transparent url(../images/scroll-nav-1.png) 0 -216px;
+    cursor: pointer;
+}
+.tooltip-button:hover {
+    background: transparent url(../images/scroll-nav-1.png) 0 -246px;
+}
+.tooltip-button-active {
+    background: transparent url(../images/scroll-nav-1.png) 0 -276px;
+}
+
 .midnav{ position:relative;width:1000px;margin:0 auto;height:60px; }
 .midnav .prev{
     float:right;width:30px;height:48px;background:url(../images/bg3_left.jpg) center center;cursor:pointer;margin-top:6px;
@@ -273,19 +291,22 @@ ul.style3 li {
 .midnav-scrollbar-sensor{
     position:absolute;
     width:1000px;
-    height:50px;
+    height:60px;
     top:60px;
     left:0px;
+    overflow:hidden;
 }
 .scroll-bar-wrap{
     position:absolute;
     width:900px;
     height:49px;
-    top:60px;
+    top:-52px;
     left:50px;
     cursor:pointer;
-    border-top:1px solid #0e3757;*/
-    alpha(opacity=0);-moz-opacity:0;opacity:0;
+    border-top:1px solid #0e3757;
+    background:url(../images/scrollbar.png) no-repeat 0 -1px;
+    background:url(../images/scrollbar-ie9.gif) no-repeat 0 -1px \0/IE9;
+    background:url(../images/scrollbar-ie8.gif) no-repeat 0 -1px \0/IE8+9;
 }
 .scroll-bar-wrap .grads{
     position:absolute;
@@ -300,6 +321,7 @@ ul.style3 li {
     width:10px;
     height:5px;
     color:#0e3757;
+    line-height:13px;
 }
 .scroll-bar{
     clear: both;
@@ -310,7 +332,7 @@ ul.style3 li {
 }
 
 .scroll-bar .ui-handle-helper-parent { position: relative; width: 100%; height: 30px; margin: 0 auto;}
-.scroll-bar .ui-slider-handle { display:block; position:absolute; top:5px; height: 42px; border:2px solid red; alpha(opacity=70);-moz-opacity:0.7;opacity:0.7; }
+.scroll-bar .ui-slider-handle { display:block; position:absolute; top:2px; height: 41px; border:2px solid red; alpha(opacity=70);-moz-opacity:0.7;opacity:0.7; }
 .scroll-bar .ui-slider-handle .ui-icon { margin: -8px auto 0; position: relative; top: 50%; }
 
 /* Corner radius */
@@ -341,7 +363,7 @@ ul.style3 li {
     cursor:pointer;
 }
 .scroll-restore{
-	background:url( ../images/scroll-nav.png ) 5px -168px;
+	background:url( ../images/scroll-nav-1.png ) 5px -168px;
 }
 .scroll-restore:hover{
 	background-position:5px -120px;
@@ -358,13 +380,13 @@ ul.style3 li {
     cursor:pointer;
 }
 .scroll-plus{
-	background:url( ../images/scroll-nav.png ) 0px 0px;
+	background:url( ../images/scroll-nav-1.png ) 0px 0px;
 }
 .scroll-plus:hover{
 	background-position:0px -30px;
 }
 .scroll-minus{
-	background:url( ../images/scroll-nav.png ) 0px -60px;
+	background:url( ../images/scroll-nav-1.png ) 0px -60px;
 }
 .scroll-minus:hover{
 	background-position:0px -90px;
