ie7/ie8相容性修正

--- a/layout_main/css/default.css
+++ b/layout_main/css/default.css
@@ -393,7 +393,9 @@ ul.style3 li {
 }
 #menu {
     position:relative;
+    *position:;
     width: 6050px;
+    *width: 6430px;
 	height: 48px;
 	padding-top: 6px;
 	_padding-top: 0px;
