--- a/layout_main/css/default.css
+++ b/layout_main/css/default.css
@@ -291,22 +291,26 @@ ul.style3 li {
 .midnav-scrollbar-sensor{
     position:absolute;
     width:1000px;
-    height:60px;
-    top:60px;
+    height:66px;
+    top:54px;
     left:0px;
     overflow:hidden;
 }
 .scroll-bar-wrap{
     position:absolute;
     width:900px;
-    height:49px;
-    top:-52px;
+    height:54px;
+    top:2px;
     left:50px;
-    cursor:pointer;
-    background-color:#333;
-    background:url(../images/scrollbar-2.png) no-repeat 0 -1px;
-    /*background:url(../images/scrollbar-ie9.gif) no-repeat 0 -1px \0/IE9;
-    background:url(../images/scrollbar-ie8.gif) no-repeat 0 -1px \0/IE8+9;*/
+    cursor:default;
+    opacity:0;
+    filter:alpha(opacity=0);
+    background:url(../images/scrollbar-2.png) no-repeat 0 7px;
+    background:url(../images/scrollbar.png) no-repeat 0 7px;
+    background:url(../images/scrollbar-ie9.gif) no-repeat 0 7px \0/IE9;
+    background:url(../images/scrollbar-ie8.gif) no-repeat 0 7px \0/IE8+9;
+    background-color:#fff;
+    border-bottom:1px solid #ccc;
 }
 .scroll-bar-wrap .grads{
     position:absolute;
@@ -332,10 +336,17 @@ ul.style3 li {
 }
 
 .scroll-bar .ui-handle-helper-parent { position: relative; width: 100%; height: 30px; margin: 0 auto;}
-.scroll-bar .ui-slider-handle { display:block; position:absolute; top:1px; height: 32px; border:2px solid #c09; }
+/*.scroll-bar .ui-slider-handle { display:block; position:absolute; top:1px; height: 42px; border:2px solid #c09;border:2px solid #c00; }*/
+.scroll-bar .ui-slider-handle { cursor:default; display:block; position:absolute; top:0px; height: 5px; background:#004670; opacity:0.7; filter:alpha(opacity=70); }
 .scroll-bar .ui-slider-handle .ui-icon { margin: -8px auto 0; position: relative; top: 50%; }
 
 /* Corner radius */
+.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 4px/*{cornerRadius}*/; -webkit-border-top-left-radius: 4px/*{cornerRadius}*/; -khtml-border-top-left-radius: 4px/*{cornerRadius}*/; border-top-left-radius: 4px/*{cornerRadius}*/; }
+.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 4px/*{cornerRadius}*/; -webkit-border-top-right-radius: 4px/*{cornerRadius}*/; -khtml-border-top-right-radius: 4px/*{cornerRadius}*/; border-top-right-radius: 4px/*{cornerRadius}*/; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 4px/*{cornerRadius}*/; -webkit-border-bottom-left-radius: 4px/*{cornerRadius}*/; -khtml-border-bottom-left-radius: 4px/*{cornerRadius}*/; border-bottom-left-radius: 4px/*{cornerRadius}*/; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 4px/*{cornerRadius}*/; -webkit-border-bottom-right-radius: 4px/*{cornerRadius}*/; -khtml-border-bottom-right-radius: 4px/*{cornerRadius}*/; border-bottom-right-radius: 4px/*{cornerRadius}*/; }
+
+
 #menu-container {
     float:right;
 	width:715px;
