--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,1 +1,61 @@
-<%=@content%>
+<% content_for :javascript_includes do %>
+<%= javascript_include_tag "rangy-core.js" %>
+<%= javascript_include_tag "rangy-cssclassapplier.js" %>
+<%= javascript_include_tag "rangy-serializer.js" %>
+<%= javascript_include_tag "document.js" %>
+<%= javascript_include_tag "jquery.layout-latest.js"%>
+<% end %>
+<% content_for :title do -%>
+<%= @title %>
+<% end -%>
+<% content_for :css_includes do -%>
+<%= stylesheet_link_tag    "document.css", :media => "all" %>
+
+<% end -%>
+<div class="ui-layout-center">
+	<%= @body%>
+</div>
+<div class="ui-layout-north">
+	<div id="nav">
+		<ul>
+			<li>
+				<a class="top" href="#top"><span></span></a>
+			</li>
+			<li>
+				<a class="bottom" href="#bottom"><span></span></a>
+			</li>
+			<li>
+				<a>Link 1</a>
+			</li>
+			<li>
+				<a>Link 2</a>
+			</li>
+			<li>
+				<a>Link 3</a>
+			</li>
+			<li>
+				<a>Link 4</a>
+			</li>
+			<li>
+				<a>Link 5</a>
+			</li>
+			<li>
+				<a>Link 6</a>
+			</li>
+			<li class="search">
+				<input type="text"/>
+				<input class="searchbutton" type="submit" value=""/>
+			</li>
+		</ul>
+	</div>
+</div>
+<div class="ui-layout-south">
+	South
+</div>
+<div class="ui-layout-east">
+	East
+</div>
+<div class="ui-layout-west">
+	West
+</div>
+
