--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -13,7 +13,9 @@
 
 <% end -%>
 <div class="ui-layout-center">
-	<%= @body%>
+	<div id="doc">
+		<%= @body%>
+	</div>
 </div>
 <div class="ui-layout-north">
 	<div id="nav">
@@ -53,7 +55,7 @@
 	South
 </div>
 <div class="ui-layout-east">
-	East
+	<ul id="markup-content-list"></ul>
 </div>
 <div class="ui-layout-west">
 	West
