--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -31,7 +31,7 @@
 				<a id="undo-btn">Undo</a>
 			</li>
 			<li>
-				<a>Link 2</a>
+				<a id="redo-btn">Redo</a>
 			</li>
 			<li>
 				<a>Link 3</a>
