--- a/app/assets/stylesheets/document.css.scss
+++ b/app/assets/stylesheets/document.css.scss
@@ -5,7 +5,7 @@ $markup-color : #F8E0F1;
 }
 
 .markup-selected{
-  background-color : darken($markup-color, 30%);
+  background-color : darken($markup-color, 15%);
 }
 
 #nav{
@@ -88,10 +88,52 @@ $markup-color : #F8E0F1;
 }
 }
 
+#doc{
+  float:left;
+  width:80%;
+  padding:10px;
+}
+
+#comments{
+  float:left;
+  width: 17%;
+}
+
 .unselectable {
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
+}
+
+.comment {
+  width: auto; 
+  height: 120px;
+  padding: 0.5em;
+  background-color:$markup-color;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+}
+
+textarea{
+   background:$markup-color;
+   -moz-border-radius: 10px;
+  border-radius: 10px;
+   border-style:none;
+   width: 100%;
+   height:100%;
+   padding: 10px;
+   .ui-resizable-handle { visibility: hidden; }
+   vertical-align: top; 
+   transition: height 0.2s;
+   -webkit-transition: height 0.2s; 
+   -moz-transition: height 0.2s;
+   font-size: 14.0pt;
+   font-family: 標楷體 
+}
+
+.line{
+  background-color : $markup-color;
+  height: 10px;
 }
