Multimarkup and connection func complete

--- a/app/assets/stylesheets/document.css.scss
+++ b/app/assets/stylesheets/document.css.scss
@@ -99,6 +99,10 @@ $markup-color : #F8E0F1;
   width: 17%;
 }
 
+#content{
+  margin-top:35px;
+}
+
 .unselectable {
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
