--- a/app/assets/stylesheets/document.css.scss
+++ b/app/assets/stylesheets/document.css.scss
@@ -111,24 +111,29 @@ $markup-color : #F8E0F1;
    user-select: none;
 }
 
+.comment{
+   display: table;
+  -moz-border-radius: 3px;
+   border-radius: 3px;
+   background-color:$markup-color;
+   transition: height 0.2s;
+   -webkit-transition: height 0.2s; 
+   -moz-transition: height 0.2s;
+   padding-left: 3px;
+   padding-top: 3px;
+   padding-bottom: 3px;
+   padding-right: 5px;
+}
+
 textarea{
-   background:$markup-color;
-   -moz-border-radius: 10px;
-   border-radius: 10px;
-   border-style:none;
    width: 100%;
-   height:100%;
-   padding: 10px;
-   .ui-resizable-handle { visibility: hidden; }
+   border-style:solid; border-width:1px;border-color:#999;
+   -moz-border-radius: 3px;
+   border-radius: 3px;
    vertical-align: top; 
    transition: height 0.2s;
    -webkit-transition: height 0.2s; 
    -moz-transition: height 0.2s;
    font-size: 14.0pt;
-   font-family: 標楷體 
-}
-
-.line{
-  background-color : $markup-color;
-  height: 10px;
+   font-family: 標楷體; 
 }
