fix addClass to comment not working issue by add !important in css

--- a/app/assets/stylesheets/document.css.scss
+++ b/app/assets/stylesheets/document.css.scss
@@ -5,7 +5,7 @@ $markup-color : #F8E0F1;
 }
 
 .markup-selected{
-  background-color : darken($markup-color, 15%);
+  background-color : darken($markup-color, 15%) !important;
 }
 
 #nav{
