--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -4,7 +4,7 @@
 		<%= document.title %>
 		<%= document.original_filename %>
 		<%= link_to 'Show', document_path(document) %>
-		<%= link_to 'Delete', document_path(document), :method => :delete %>
+		<%= link_to 'Dlete', document_path(document), :method => :delete %>
 	</li>
 	<% end %>
 </ul>
